@@ -7,10 +7,10 @@
 
 CFLAGS = -Wall -g
 INSTALL = install
-INSTALL_FILE    = $(INSTALL) -p    -o root -g root  -m  644
-INSTALL_PROGRAM = $(INSTALL) -p    -o root -g root  -m  755
-INSTALL_SCRIPT  = $(INSTALL) -p    -o root -g root  -m  755
-INSTALL_DIR     = $(INSTALL) -p -d -o root -g root  -m  755
+export INSTALL_FILE    = $(INSTALL) -p    -o root -g root  -m  644
+export INSTALL_PROGRAM = $(INSTALL) -p    -o root -g root  -m  755
+export INSTALL_SCRIPT  = $(INSTALL) -p    -o root -g root  -m  755
+export INSTALL_DIR     = $(INSTALL) -p -d -o root -g root  -m  755
 
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
 CFLAGS += -O0
